<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="home_header">My Nanodegree Apps!</string>

    <string name="xyz_reader_button">XYZ Reader</string>
    <string name="library_button">Library App</string>
    <string name="build_it_bigger_button">Build it Bigger</string>
    <string name="capstone_button">Capstone: My Own App</string>
    <string name="scores_button">Scores App</string>
    <string name="popular_movies_button">Popular Movies</string>
    <string name="title_activity_popular_movies">Popular Movies</string>
    <string name="title_activity_movie_detail_activty">Movie Detail</string>
    <string name="menu_sort_popularity">Sort by Popularity</string>
    <string name="menu_sort_rating">Sort by Rating</string>
    <string name="poster_alt_text">poster</string>
    <string name="trailers_header">Trailers:</string>
    <string name="synopsis_header">Synopsis</string>
    <string name="score_header">Score</string>
    <string name="release_date_header">Release Date</string>
</resources>
