<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="0px"
    android:paddingBottom="0px"
    android:paddingLeft="0px"
    android:paddingRight="0px"
    android:paddingTop="0px"
    tools:context="darren.udacity.project0.popularMovies.MovieDetailActivityFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/holo_green_dark">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_marginLeft="16dp"
                    android:layout_row="4"
                    android:gravity="center_vertical"
                    android:text="Title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffffff"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="125dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/placeholder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_header"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <RatingBar
                        android:id="@+id/review_score"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|left"
                        android:layout_marginBottom="6dp"
                        android:layout_marginRight="6dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="5.5" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/movie_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:text="@string/synopsis_header"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#386281" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trailers_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_text_left_margin"
                    android:singleLine="false"
                    android:text="@string/trailers_header"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e1e1e1" />

                <darren.udacity.project0.views.NonScrollableListView
                    android:id="@+id/trailers_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
